// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zeus compiler jsx transform > compiles component usage 1`] = `
"import { insert as _insert, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<h1></h1>\`);
function MyComponent(props: {
  title: string;
}) {
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _insert(_el$, props.title);
    return _el$;
  })();
}
const App = () => _createComponent(MyComponent, {
  title: "hello"
});"
`;

exports[`zeus compiler jsx transform > compiles dynamic child before static element 1`] = `
"import { insert as _insert, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  _insert(_el$, props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles dynamic text child 1`] = `
"import { insert as _insert, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  _insert(_el$, props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles nested component usage 1`] = `
"import { insert as _insert, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<span>Count:</span>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<div><h1></h1></div>\`),
  _tmpl$3 = /*#__PURE__*/_template(\`<div></div>\`);
import { Show } from '@zeus-js/runtime-dom';
interface Props {
  title: string;
  count?: number;
}
export function MyComponent(props: Props) {
  return (() => {
    const _el$ = _tmpl$2().firstChild;
    const _el$2 = _el$.firstChild;
    _insert(_el$2, props.title);
    _insert(_el$, _createComponent(Show, {
      when: props.count !== undefined,
      children: (() => {
        const _el$3 = _tmpl$().firstChild;
        _insert(_el$3, props.count);
        return _el$3;
      })()
    }));
    return _el$;
  })();
}
export function ParentComponent() {
  return (() => {
    const _el$4 = _tmpl$3().firstChild;
    _insert(_el$4, _createComponent(MyComponent, {
      title: "Hello"
    }));
    _insert(_el$4, _createComponent(MyComponent, {
      title: "World",
      count: 5
    }));
    return _el$4;
  })();
}"
`;

exports[`zeus compiler jsx transform > compiles static element 1`] = `
"import { template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div>hello</div>\`);
const App = () => _tmpl$().firstChild;"
`;

exports[`zeus compiler jsx transform > compiles static element before dynamic child 1`] = `
"import { insert as _insert, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  _insert(_el$, props.name);
  return _el$;
})();"
`;
